feat: add centralized DockerSupport with auto-start and fail-fast error handling
- Create DockerSupport utility class with:
  - Docker auto-detection using Testcontainers
  - Auto-start Docker Desktop (Windows/Mac) or daemon (Linux)
  - 60-second retry logic with 2-second polling
  - Prominent error banner on failure

- Update container base classes to use DockerSupport:
  - LocalStackContainerBase uses DockerSupport.ensureDockerAvailable()
  - OracleContainerBase uses DockerSupport.ensureDockerAvailable()

- Add RealAwsTestBase for real AWS E2E tests:
  - @EnabledIfSystemProperty for conditional execution
  - AWS credential validation via STS GetCallerIdentity
  - Fail-fast with clear error banner if credentials unavailable
  - Helper methods for S3 and CloudWatch Logs clients

- Add AWS STS dependency to pom.xml for credential validation

- Update tasks.md to mark completed items